<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6eb7d8"
    tools:context="org.copypastapublishing.caesarnapleswiki.FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageButton"
            android:layout_toStartOf="@+id/imageButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/holo_orange_dark"
            android:alpha=".5"
            android:layout_toLeftOf="@+id/imageButton"
            android:clickable="true"
            android:onClick="websiteView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"


            android:text="@string/welcome1"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="cursive"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/yellow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="100dp"
            android:src="@mipmap/lowerlogo"
            android:id="@+id/imageButton"
            android:layout_x="150dp"
            android:layout_y="150dp"
            android:layout_height="100dp"
            android:scaleType="fitEnd"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/email"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/button3"
            android:onClick="email"
            android:background="@color/colorPrimary"
            android:fontFamily="casual"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView"
            android:layout_above="@+id/view" />

        <TextView
            android:text="@string/cnwiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:fontFamily="serif-monospace"
            android:textSize="14sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/missing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="28sp"
            android:fontFamily="serif"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cnhead"
            android:id="@+id/imageView"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/blinking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blinking"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:textSize="28sp"
            android:textColor="@android:color/holo_red_light" />

        <ImageView
            android:src="@mipmap/cnwiki"
            android:id="@+id/imageView2"
            android:onClick="websiteView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_above="@+id/view"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</FrameLayout>
